[package]
name = "plonky3"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-air = { path = "../Plonky3/air", version = "0.1.0" }
p3-baby-bear = { path = "../Plonky3/baby-bear", version = "0.1.0" }
p3-blake3 = { path = "../Plonky3/blake3", version = "0.1.0" }
p3-blake3-air = { path = "../Plonky3/blake3-air", version = "0.1.0" }
p3-bn254-fr = { path = "../Plonky3/bn254-fr", version = "0.1.0" }
p3-challenger = { path = "../Plonky3/challenger", version = "0.1.0" }
p3-circle = { path = "../Plonky3/circle", version = "0.1.0" }
p3-commit = { path = "../Plonky3/commit", version = "0.1.0" }
p3-dft = { path = "../Plonky3/dft", version = "0.1.0" }
p3-examples = { path = "../Plonky3/examples", version = "0.1.0" }
p3-field = { path = "../Plonky3/field", version = "0.1.0" }
p3-field-testing = { path = "../Plonky3/field-testing", version = "0.1.0" }
p3-fri = { path = "../Plonky3/fri", version = "0.1.0" }
p3-goldilocks = { path = "../Plonky3/goldilocks", version = "0.1.0" }
p3-interpolation = { path = "../Plonky3/interpolation", version = "0.1.0" }
p3-keccak = { path = "../Plonky3/keccak", version = "0.1.0" }
p3-keccak-air = { path = "../Plonky3/keccak-air", version = "0.1.0" }
p3-koala-bear = { path = "../Plonky3/koala-bear", version = "0.1.0" }
p3-matrix = { path = "../Plonky3/matrix", version = "0.1.0" }
p3-maybe-rayon = { path = "../Plonky3/maybe-rayon", version = "0.1.0" }
p3-mds = { path = "../Plonky3/mds", version = "0.1.0" }
p3-merkle-tree = { path = "../Plonky3/merkle-tree", version = "0.1.0" }
p3-mersenne-31 = { path = "../Plonky3/mersenne-31", version = "0.1.0" }
p3-monty-31 = { path = "../Plonky3/monty-31", version = "0.1.0" }
p3-poseidon = { path = "../Plonky3/poseidon", version = "0.1.0" }
p3-poseidon2 = { path = "../Plonky3/poseidon2", version = "0.1.0" }
p3-poseidon2-air = { path = "../Plonky3/poseidon2-air", version = "0.1.0" }
p3-rescue = { path = "../Plonky3/rescue", version = "0.0.1" }
p3-sha256 = { path = "../Plonky3/sha256", version = "0.1.0" }
p3-symmetric = { path = "../Plonky3/symmetric", version = "0.1.0" }
p3-uni-stark = { path = "../Plonky3/uni-stark", version = "0.1.0" }
p3-util = { path = "../Plonky3/util", version = "0.1.0" }
clap_derive = "4.5.18"
postcard = { version = "1.0.0", default-features = false, features = ["alloc"] }
tracing = "0.1.37"
tracing-forest = { version="0.1.6", features = ["ansi", "smallvec"] }
tracing-subscriber = { version="0.3.17", features = ["std", "env-filter"] }
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.9.0"
serde = { version = "1.0", default-features = false }
itertools = "0.14.0"
blake3 = "1.5"
bincode = "1.3.3"
serde_json = "1.0.114"


[features]
parallel = ["p3-maybe-rayon/parallel"]


[profile.profiling]
inherits = "release"
debug = true